# US_colleges_data

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
jupyter/: college_data_logistic_regression.ipynb
jupyter/images/: college_wise_accept.xlsx  description of apps accept and eroll columns  save.xlsx
report/: Assignment_3_logitstic_regression.docx  ~$signment_3_logitstic_regression.docx  ~WRL0843.tmp
