[tool.poetry]
name = "us-college-data"
version = "0.1.0"
description = ""
authors = ["Abhishek Mehra <me.abhishek18@gmail.com>"]
readme = "README.md"
packages = [{include = "us_college_data"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.3"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
